--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -226,6 +226,20 @@
     "editTooltip": "Edit this snippet",
     "deleteTooltip": "Delete this snippet"
   },
+  "commandHistory": {
+    "title": "History",
+    "searchPlaceholder": "Search commands...",
+    "noTerminal": "No active terminal",
+    "noTerminalHint": "Open a terminal to see its command history.",
+    "empty": "No command history yet",
+    "emptyHint": "Execute commands in the active terminal to build its history.",
+    "noResults": "No commands found",
+    "noResultsHint": "No commands matching \"{{query}}\"",
+    "deleteSuccess": "Command deleted from history",
+    "deleteFailed": "Failed to delete command.",
+    "deleteTooltip": "Delete command",
+    "tabHint": "Use Tab in Terminal to autocomplete from command history"
+  },
   "homepage": {
     "loggedInTitle": "Logged in!",
     "loggedInMessage": "You are logged in! Use the sidebar to access all available tools. To get started, create an SSH Host in the SSH Manager tab. Once created, you can connect to that host using the other apps in the sidebar.",
@@ -482,26 +496,20 @@
     "confirmRevokeAllSessions": "Are you sure you want to revoke all sessions for this user?",
     "failedToRevokeSessions": "Failed to revoke sessions",
     "sessionsRevokedSuccessfully": "Sessions revoked successfully",
-    "convertToPasswordAuth": "Convert to Password Authentication",
-    "convertOIDCToPassword": "Convert {{username}} from OIDC/SSO authentication to password-based authentication. This will allow the user to log in with a username and password instead of through an external provider.",
-    "convertUserDialogTitle": "Convert to Password Authentication",
-    "convertUserDialogDescription": "This action will set a new password, disable OIDC/SSO login, log out all sessions, and preserve all user data.",
-    "convertActionWillSetPassword": "Set a new password for this user",
-    "convertActionWillDisableOIDC": "Disable OIDC/SSO login for this account",
-    "convertActionWillLogout": "Log out all active sessions",
-    "convertActionWillPreserveData": "Preserve all user data (SSH hosts, credentials, etc.)",
-    "convertPasswordLabel": "New Password (min 8 chars)",
-    "convertPasswordPlaceholder": "Enter new password",
-    "convertTotpLabel": "TOTP Code (if user has 2FA enabled)",
-    "convertTotpPlaceholder": "000000",
-    "convertUserButton": "Convert User",
-    "convertingUser": "Converting...",
-    "userConvertedSuccessfully": "User {{username}} has been converted to password authentication. All sessions have been revoked.",
-    "failedToConvertUser": "Failed to convert user account",
-    "convertPasswordRequired": "Password is required",
-    "convertPasswordTooShort": "Password must be at least 8 characters long",
-    "convertTotpRequired": "TOTP code is required for this user",
-    "convertToPasswordTitle": "Convert to password authentication",
+    "linkToPasswordAccount": "Link to Password Account",
+    "linkOIDCDialogTitle": "Link OIDC Account to Password Account",
+    "linkOIDCDialogDescription": "Link {{username}} (OIDC user) to an existing password account. This will enable dual authentication for the password account.",
+    "linkOIDCWarningTitle": "Warning: OIDC User Data Will Be Deleted",
+    "linkOIDCActionDeleteUser": "Delete the OIDC user account and all their data",
+    "linkOIDCActionAddCapability": "Add OIDC login capability to the target password account",
+    "linkOIDCActionDualAuth": "Allow the password account to login with both password and OIDC",
+    "linkTargetUsernameLabel": "Target Password Account Username",
+    "linkTargetUsernamePlaceholder": "Enter username of password account",
+    "linkAccountsButton": "Link Accounts",
+    "linkingAccounts": "Linking...",
+    "accountsLinkedSuccessfully": "OIDC user {{oidcUsername}} has been linked to {{targetUsername}}",
+    "failedToLinkAccounts": "Failed to link accounts",
+    "linkTargetUsernameRequired": "Target username is required",
     "databaseSecurity": "Database Security",
     "encryptionStatus": "Encryption Status",
     "encryptionEnabled": "Encryption Enabled",
@@ -889,6 +897,13 @@
     "searchServers": "Search servers...",
     "noServerFound": "No server found",
     "jumpHostsOrder": "Connections will be made in order: Jump Host 1 → Jump Host 2 → ... → Target Server",
+    "quickActions": "Quick Actions",
+    "quickActionsDescription": "Quick actions allow you to create custom buttons that execute SSH snippets on this server. These buttons will appear at the top of the Server Stats page for quick access.",
+    "quickActionsList": "Quick Actions List",
+    "addQuickAction": "Add Quick Action",
+    "quickActionName": "Action name",
+    "noSnippetFound": "No snippet found",
+    "quickActionsOrder": "Quick action buttons will appear in the order listed above on the Server Stats page",
     "advancedAuthSettings": "Advanced Authentication Settings"
   },
   "terminal": {
@@ -1370,7 +1385,13 @@
     "recentSuccessfulLogins": "Recent Successful Logins",
     "recentFailedAttempts": "Recent Failed Attempts",
     "noRecentLoginData": "No recent login data",
-    "from": "from"
+    "from": "from",
+    "quickActions": "Quick Actions",
+    "executeQuickAction": "Execute {{name}}",
+    "executingQuickAction": "Executing {{name}}...",
+    "quickActionSuccess": "{{name}} completed successfully",
+    "quickActionFailed": "{{name}} failed",
+    "quickActionError": "Failed to execute {{name}}"
   },
   "auth": {
     "tagline": "SSH SERVER MANAGER",
@@ -1553,6 +1574,8 @@
     "selectPreferredLanguage": "Select your preferred language for the interface",
     "fileColorCoding": "File Color Coding",
     "fileColorCodingDesc": "Color-code files by type: folders (red), files (blue), symlinks (green)",
+    "commandAutocomplete": "Command Autocomplete",
+    "commandAutocompleteDesc": "Enable Tab key autocomplete suggestions for terminal commands based on your command history",
     "currentPassword": "Current Password",
     "passwordChangedSuccess": "Password changed successfully! Please log in again.",
     "failedToChangePassword": "Failed to change password. Please check your current password and try again."
