--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -225,6 +225,20 @@
     "editTooltip": "Редактировать этот сниппет",
     "deleteTooltip": "Удалить этот сниппет"
   },
+  "commandHistory": {
+    "title": "История",
+    "searchPlaceholder": "Поиск команд...",
+    "noTerminal": "Нет активного терминала",
+    "noTerminalHint": "Откройте терминал, чтобы увидеть историю команд.",
+    "empty": "История команд пока пуста",
+    "emptyHint": "Выполните команды в активном терминале, чтобы создать историю.",
+    "noResults": "Команды не найдены",
+    "noResultsHint": "Нет команд, соответствующих \"{{query}}\"",
+    "deleteSuccess": "Команда удалена из истории",
+    "deleteFailed": "Не удалось удалить команду.",
+    "deleteTooltip": "Удалить команду",
+    "tabHint": "Используйте Tab в Терминале для автозаполнения из истории команд"
+  },
   "homepage": {
     "loggedInTitle": "Вы вошли в систему!",
     "loggedInMessage": "Вы вошли в систему! Используйте боковую панель для доступа ко всем доступным инструментам. Чтобы начать, создайте SSH-хост в разделе SSH-менеджера. После создания вы можете подключиться к этому хосту, используя другие приложения на боковой панели.",
@@ -1461,6 +1475,10 @@
     "local": "Локальный",
     "external": "Внешний (OIDC)",
     "selectPreferredLanguage": "Выберите предпочитаемый язык интерфейса",
+    "fileColorCoding": "Цветовое кодирование файлов",
+    "fileColorCodingDesc": "Цветовая кодировка файлов по типу: папки (красный), файлы (синий), символические ссылки (зелёный)",
+    "commandAutocomplete": "Автодополнение команд",
+    "commandAutocompleteDesc": "Включить автодополнение команд терминала клавишей Tab на основе вашей истории команд",
     "currentPassword": "Текущий пароль",
     "passwordChangedSuccess": "Пароль успешно изменен! Пожалуйста, войдите снова.",
     "failedToChangePassword": "Не удалось изменить пароль. Пожалуйста, проверьте ваш текущий пароль и попробуйте снова."
