--- a/src/locales/pt-BR/translation.json
+++ b/src/locales/pt-BR/translation.json
@@ -191,6 +191,20 @@
     "enableRightClickCopyPaste": "Habilitar copiar/colar com botão direito",
     "shareIdeas": "Tem ideias sobre o que deve vir a seguir nas ferramentas SSH? Compartilhe em"
   },
+  "commandHistory": {
+    "title": "Histórico",
+    "searchPlaceholder": "Pesquisar comandos...",
+    "noTerminal": "Nenhum terminal ativo",
+    "noTerminalHint": "Abra um terminal para ver seu histórico de comandos.",
+    "empty": "Ainda não há histórico de comandos",
+    "emptyHint": "Execute comandos no terminal ativo para criar um histórico.",
+    "noResults": "Nenhum comando encontrado",
+    "noResultsHint": "Nenhum comando correspondente a \"{{query}}\"",
+    "deleteSuccess": "Comando removido do histórico",
+    "deleteFailed": "Falha ao excluir comando.",
+    "deleteTooltip": "Excluir comando",
+    "tabHint": "Use Tab no Terminal para autocompletar do histórico de comandos"
+  },
   "homepage": {
     "loggedInTitle": "Conectado!",
     "loggedInMessage": "Você está conectado! Use a barra lateral para acessar todas as ferramentas disponíveis. Para começar, crie um Host SSH na aba Gerenciador SSH. Depois de criado, você pode se conectar a esse host usando os outros apps na barra lateral.",
@@ -1322,6 +1336,10 @@
     "local": "Local",
     "external": "Externo (OIDC)",
     "selectPreferredLanguage": "Selecione seu idioma preferido para a interface",
+    "fileColorCoding": "Codificação de Cores de Arquivos",
+    "fileColorCodingDesc": "Codificar arquivos por cores por tipo: pastas (vermelho), arquivos (azul), links simbólicos (verde)",
+    "commandAutocomplete": "Autocompletar Comandos",
+    "commandAutocompleteDesc": "Ativar sugestões de autocompletar com a tecla Tab para comandos do terminal baseado no seu histórico",
     "currentPassword": "Senha Atual",
     "passwordChangedSuccess": "Senha alterada com sucesso! Por favor, faça login novamente.",
     "failedToChangePassword": "Falha ao alterar a senha. Por favor, verifique sua senha atual e tente novamente."
