fix: More bug fixes and QOL fixes

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -915,6 +915,8 @@
     "copy": "Kopieren",
     "cut": "Ausschneiden",
     "paste": "Einfügen",
+    "copyPath": "Pfad kopieren",
+    "copyPaths": "Pfade kopieren",
     "delete": "Löschen",
     "properties": "Eigenschaften",
     "refresh": "Aktualisieren",
@@ -924,6 +926,9 @@
     "deleteFiles": "{{count}} Element(e) löschen",
     "filesCopiedToClipboard": "{{count}} Element(e) in die Zwischenablage kopiert",
     "filesCutToClipboard": "{{count}} Element(e) in die Zwischenablage ausschneiden",
+    "pathCopiedToClipboard": "Pfad in Zwischenablage kopiert",
+    "pathsCopiedToClipboard": "{{count}} Pfade in Zwischenablage kopiert",
+    "failedToCopyPath": "Fehler beim Kopieren des Pfades in die Zwischenablage",
     "movedItems": "{{count}} Element(e) verschoben",
     "failedToDeleteItem": "Das Löschen des Elements ist fehlgeschlagen.",
     "itemRenamedSuccessfully": "{{type}} erfolgreich umbenannt",
