--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1040,6 +1040,8 @@
     "copy": "Copy",
     "cut": "Cut",
     "paste": "Paste",
+    "copyPath": "Copy Path",
+    "copyPaths": "Copy Paths",
     "delete": "Delete",
     "properties": "Properties",
     "preview": "Preview",
@@ -1050,6 +1052,9 @@
     "deleteFiles": "Delete {{count}} items",
     "filesCopiedToClipboard": "{{count}} items copied to clipboard",
     "filesCutToClipboard": "{{count}} items cut to clipboard",
+    "pathCopiedToClipboard": "Path copied to clipboard",
+    "pathsCopiedToClipboard": "{{count}} paths copied to clipboard",
+    "failedToCopyPath": "Failed to copy path to clipboard",
     "movedItems": "Moved {{count}} items",
     "failedToDeleteItem": "Failed to delete item",
     "itemRenamedSuccessfully": "{{type}} renamed successfully",
