--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -910,6 +910,8 @@
     "copy": "Copier",
     "cut": "Couper",
     "paste": "Coller",
+    "copyPath": "Copier le chemin",
+    "copyPaths": "Copier les chemins",
     "delete": "Supprimer",
     "properties": "Propriétés",
     "refresh": "Actualiser",
@@ -919,6 +921,9 @@
     "deleteFiles": "Supprimer {{count}} éléments",
     "filesCopiedToClipboard": "{{count}} éléments copiés dans le presse-papiers",
     "filesCutToClipboard": "{{count}} éléments coupés dans le presse-papiers",
+    "pathCopiedToClipboard": "Chemin copié dans le presse-papiers",
+    "pathsCopiedToClipboard": "{{count}} chemins copiés dans le presse-papiers",
+    "failedToCopyPath": "Échec de la copie du chemin dans le presse-papiers",
     "movedItems": "{{count}} éléments déplacés",
     "failedToDeleteItem": "Échec de la suppression de l'élément",
     "itemRenamedSuccessfully": "{{type}} renommé avec succès",
