--- a/src/locales/pt-BR/translation.json
+++ b/src/locales/pt-BR/translation.json
@@ -861,6 +861,8 @@
     "copy": "Copiar",
     "cut": "Recortar",
     "paste": "Colar",
+    "copyPath": "Copiar caminho",
+    "copyPaths": "Copiar caminhos",
     "delete": "Excluir",
     "properties": "Propriedades",
     "preview": "Visualizar",
@@ -871,6 +873,9 @@
     "deleteFiles": "Excluir {{count}} itens",
     "filesCopiedToClipboard": "{{count}} itens copiados para a área de transferência",
     "filesCutToClipboard": "{{count}} itens recortados para a área de transferência",
+    "pathCopiedToClipboard": "Caminho copiado para a área de transferência",
+    "pathsCopiedToClipboard": "{{count}} caminhos copiados para a área de transferência",
+    "failedToCopyPath": "Falha ao copiar caminho para a área de transferência",
     "movedItems": "{{count}} itens movidos",
     "failedToDeleteItem": "Falha ao excluir item",
     "itemRenamedSuccessfully": "{{type}} renomeado com sucesso",
