--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -978,6 +978,8 @@
     "copy": "Копировать",
     "cut": "Вырезать",
     "paste": "Вставить",
+    "copyPath": "Копировать путь",
+    "copyPaths": "Копировать пути",
     "delete": "Удалить",
     "properties": "Свойства",
     "preview": "Просмотр",
@@ -988,6 +990,9 @@
     "deleteFiles": "Удалить {{count}} элементов",
     "filesCopiedToClipboard": "{{count}} элементов скопировано в буфер обмена",
     "filesCutToClipboard": "{{count}} элементов вырезано в буфер обмена",
+    "pathCopiedToClipboard": "Путь скопирован в буфер обмена",
+    "pathsCopiedToClipboard": "{{count}} путей скопировано в буфер обмена",
+    "failedToCopyPath": "Не удалось скопировать путь в буфер обмена",
     "movedItems": "Перемещено {{count}} элементов",
     "failedToDeleteItem": "Не удалось удалить элемент",
     "itemRenamedSuccessfully": "{{type}} успешно переименован",
