--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -1025,7 +1025,11 @@
     "noSSHConnection": "无SSH连接可用",
     "enterFolderName": "输入文件夹名称：",
     "enterFileName": "输入文件名称：",
+    "copy": "复制",
     "cut": "剪切",
+    "paste": "粘贴",
+    "copyPath": "复制路径",
+    "copyPaths": "复制路径",
     "properties": "属性",
     "refresh": "刷新",
     "downloadFiles": "下载 {{count}} 个文件",
@@ -1034,6 +1038,9 @@
     "deleteFiles": "删除 {{count}} 个项目",
     "filesCopiedToClipboard": "{{count}} 个项目已复制到剪贴板",
     "filesCutToClipboard": "{{count}} 个项目已剪切到剪贴板",
+    "pathCopiedToClipboard": "路径已复制到剪贴板",
+    "pathsCopiedToClipboard": "{{count}} 个路径已复制到剪贴板",
+    "failedToCopyPath": "复制路径到剪贴板失败",
     "movedItems": "已移动 {{count}} 个项目",
     "unknownSize": "未知大小",
     "fileIsEmpty": "文件为空",
