fix: Fix OIDC linking and prep release

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -510,6 +510,10 @@
     "accountsLinkedSuccessfully": "OIDC user {{oidcUsername}} has been linked to {{targetUsername}}",
     "failedToLinkAccounts": "Failed to link accounts",
     "linkTargetUsernameRequired": "Target username is required",
+    "unlinkOIDCTitle": "Unlink OIDC Authentication",
+    "unlinkOIDCDescription": "Remove OIDC authentication from {{username}}? The user will only be able to login with username/password after this.",
+    "unlinkOIDCSuccess": "OIDC unlinked from {{username}}",
+    "failedToUnlinkOIDC": "Failed to unlink OIDC",
     "databaseSecurity": "Database Security",
     "encryptionStatus": "Encryption Status",
     "encryptionEnabled": "Encryption Enabled",
@@ -1576,6 +1580,7 @@
     "authMethod": "Authentication Method",
     "local": "Local",
     "external": "External (OIDC)",
+    "externalAndLocal": "Dual Auth",
     "selectPreferredLanguage": "Select your preferred language for the interface",
     "fileColorCoding": "File Color Coding",
     "fileColorCodingDesc": "Color-code files by type: folders (red), files (blue), symlinks (green)",
