--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -860,7 +860,7 @@
     "jumpHostsOrder": "Подключения будут выполнены в порядке: Промежуточный хост 1 → Промежуточный хост 2 → ... → Целевой сервер",
     "advancedAuthSettings": "Расширенные настройки аутентификации",
     "sudoPasswordAutoFill": "Автозаполнение пароля sudo",
-    "sudoPasswordAutoFillDesc": "Показывать всплывающее окно для автоматического ввода пароля при выполнении команд sudo",
+    "sudoPasswordAutoFillDesc": "Показывать всплывающее окно для автоматического ввода пароля при выполнении команд sudo"
   },
   "terminal": {
     "title": "Терминал",
