Add empty state message for role assignment
- Display helpful message when no custom roles available
- Clarify that system roles are auto-assigned
- Add noCustomRolesToAssign translation in English and Chinese

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1887,6 +1887,7 @@
     "failedToRemoveRole": "Failed to remove role",
     "cannotRemoveSystemRole": "Cannot remove system role",
     "cannotShareWithSelf": "Cannot share host with yourself",
+    "noCustomRolesToAssign": "No custom roles available. System roles are auto-assigned.",
     "auditLogs": "Audit Logs",
     "viewAuditLogs": "View Audit Logs",
     "action": "Action",
